# hermes-modules

./: README  install.sh
C++/: CMakeLists.txt
C++/01-Poisson/: CMakeLists.txt  definitions.cpp  definitions.h  main.cpp
C++/Common/: CMakeLists.txt  common.cpp  common.h  hermes_module.h
C++/cmake/: FindHERMES.cmake
C++/hermes_module/: hermes_module.cpp
C++/hermes_modulePoisson/: CMakeLists.txt  definitions.cpp  definitions.h
python/: wrappers_generate.sh  wrappers_install.sh
python/01-Poisson/: hermes_modulePoisson.pxd  hermes_modulePoisson.pxi  hermes_modulePoisson.pyx  setup.py
python/Common/: hermes-module.pxd  hermes-module.pyx  hermes_module.pxd  hermes_module.pxi  hermes_module_common.pxd  setup.py
python/hermes_module/: hermes_module.pxd  hermes_module.pxi  hermes_module.pyx
